# dava-proof

./: ARCHITECTURE.md  CODEX_LEARNING_LOG.md  CODEX_VERIFICATION.md  DAVA_TRUE_CAPABILITIES.md  KAGGLE_S6E4_PLAN.md  README.md  agent_bus_example.py  bio_acoustic_dampener.py  chrysalis.rs  dava-knowledge-secrets.md  dava_bridge_client.py  dava_k8s_builder.rs  dava_mesh_network.rs  dava_self_builder.rs  dava_spawner.rs  docker-compose.yml  evolution_loop_insights.py  imap_ai_bot.py  imap_phone_bot.py  kernel_monitor.py  nexus_core_onedrive.py  nexus_observer.py  phi_metric.py  phi_proctor.py  phi_proctor_report.json  phi_proctor_report.md  phi_quality_gate.py  set_task_system.py  stress_test_phi.py  test_phi_comprehensive.py  test_phi_edge_cases.py  test_phi_fail_fast.py  test_phi_metric.py  test_phi_proctor.py  test_phi_quality_gate.py  test_phi_regression.py  transcendence_engine.rs
OneDrive/Desktop/bid-command/: .gitignore  pyproject.toml  requirements.txt
OneDrive/Desktop/bid-command/config/: hoags.json
OneDrive/Desktop/bid-command/docs/superpowers/plans/: 2026-03-29-crew-command-phase1.md  2026-04-08-pdffill-universal.md
OneDrive/Desktop/bid-command/docs/superpowers/specs/: 2026-03-29-crew-command-design.md  2026-04-08-pdffill-universal-design.md
OneDrive/Desktop/bid-command/engine/: cli.py  config.py  db.py  pipeline.py
OneDrive/Desktop/bid-command/engine/fill/: column_detect.py  pdf_filler.py  visual_qc.py
OneDrive/Desktop/bid-command/engine/fill_universal/: __init__.py  __main__.py  classify.py  cli.py  context.py  detect.py  fill.py  memory.py  models.py  render.py
OneDrive/Desktop/bid-command/engine/ingest/: doc_reader.py  zip_extractor.py
OneDrive/Desktop/bid-command/engine/intel/intel/: __init__.py  pricing.py  sam_api.py  sub_finder.py  usaspending.py
OneDrive/Desktop/bid-command/engine/parse/: clins.py  solicitation.py  wage_det.py
OneDrive/Desktop/bid-command/hoags-tools/: Cargo.toml  debug_check.sh
OneDrive/Desktop/bid-command/hoags-tools/.claude/: ralph-loop.local.md
OneDrive/Desktop/bid-command/hoags-tools/actionminer/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/actionminer/src/: deadline.rs  extract.rs  main.rs  models.rs  tracker.rs
OneDrive/Desktop/bid-command/hoags-tools/clauseguard/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/clauseguard/src/: analyzer.rs  clauses.rs  main.rs  report.rs
OneDrive/Desktop/bid-command/hoags-tools/core/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/core/src/: bus.rs  connectors.rs  integration_tests.rs  lib.rs  memory.rs
OneDrive/Desktop/bid-command/hoags-tools/dava-bridge/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/dava-bridge/src/: lib.rs
OneDrive/Desktop/bid-command/hoags-tools/davalive/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/davalive/src/: daemon.rs  health.rs  main.rs  stats.rs
OneDrive/Desktop/bid-command/hoags-tools/docconv/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/docconv/src/: convert.rs  extract.rs  formats.rs  main.rs  pdf_ops.rs
OneDrive/Desktop/bid-command/hoags-tools/invoicer/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/invoicer/src/: generate.rs  invoice.rs  main.rs  tracker.rs
OneDrive/Desktop/bid-command/hoags-tools/mailcraft/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/mailcraft/src/: draft.rs  main.rs  templates.rs
OneDrive/Desktop/bid-command/hoags-tools/mousecontrol/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/mousecontrol/src/: actions.rs  main.rs  platform_win.rs
OneDrive/Desktop/bid-command/hoags-tools/pdffill/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/propbuilder/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/propbuilder/src/: context.rs  main.rs  proposal.rs  templates.rs
OneDrive/Desktop/bid-command/hoags-tools/receipts/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/receipts/src/: expense.rs  main.rs  report.rs  tracker.rs
OneDrive/Desktop/bid-command/hoags-tools/screenreader/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/screenreader/src/: capture.rs  main.rs  read.rs  watch.rs  windows.rs
OneDrive/Desktop/bid-command/hoags-tools/sheetwise/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/sheetwise/src/: filter.rs  main.rs  output.rs  pivot.rs  reader.rs  stats.rs
OneDrive/Desktop/bid-command/hoags-tools/sigstamp/: Cargo.toml
OneDrive/Desktop/bid-command/hoags-tools/sigstamp/src/: detect.rs  main.rs  sign.rs
OneDrive/Desktop/bid-command/pdffill-rs/: Cargo.toml
OneDrive/Desktop/bid-command/pdffill-rs/examples/: dump_text.rs
OneDrive/Desktop/bid-command/pdffill-rs/src/: classify.rs  context.rs  detect.rs  fill.rs  lib.rs  main.rs  memory.rs  models.rs  render.rs
OneDrive/Desktop/bid-command/tests/: test_clins.py  test_column_detect.py  test_config.py  test_db.py  test_doc_reader.py  test_pdf_filler.py  test_pipeline.py  test_pricing.py  test_sam_api.py  test_solicitation.py  test_sub_finder.py  test_usaspending.py  test_visual_qc.py  test_wage_det.py  test_zip_extractor.py
OneDrive/Desktop/bid-command/tests/test_fill_universal/: test_classify.py  test_context.py  test_detect.py  test_fill.py  test_integration.py  test_memory.py  test_models.py  test_render.py
OneDrive/Desktop/bid-command/tests/test_fill_universal/fixtures/: company.json
davalive/src/: daemon.rs  health.rs  main.rs  stats.rs
mimo_agent_bus/inbox/dava_bridge/: 90fcd92a-b9c2-4ad8-bc21-2e3e34622833.json
mimo_agent_bus/inbox/mimo_learner/: 8ffb0f40-422a-496c-a1b0-a994797310b0.json  9dbc8455-6ab8-496d-83f6-d085565c110f.json
mimo_agent_bus/outbox/: 8ffb0f40-422a-496c-a1b0-a994797310b0.json  90fcd92a-b9c2-4ad8-bc21-2e3e34622833.json  9dbc8455-6ab8-496d-83f6-d085565c110f.json
src/: phone_module.py  printer_module.py
