[workspace]
resolver = "2"
members = [
    "core",
    "pdffill",
    "invoicer",
    "docconv",
    "mailcraft",
    "receipts",
    "clauseguard",
    "propbuilder",
    "sigstamp",
    "sheetwise",
    "actionminer",
    "dava-bridge",
]

[workspace.dependencies]
lopdf = "0.35"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
tempfile = "3"
csv = "1.3"
tabled = { version = "0.17", features = ["ansi"] }
anyhow = "1"
