[package]
name = "pdffill"
version = "0.1.0"
edition = "2024"
description = "Universal PDF field detection and filling engine"

[dependencies]
lopdf = "0.35"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "pdffill"
path = "src/main.rs"
