[package]
name = "hoags_core"
version = "0.1.0"
edition = "2024"

[dependencies]
lopdf = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
