[package]
name = "mailcraft"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "mailcraft"
path = "src/main.rs"
