[package]
name = "mousecontrol"
version = "0.1.0"
edition = "2024"

[dependencies]
hoags_core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "mousecontrol"
path = "src/main.rs"
