[package]
name = "pdffill"
version = "0.1.0"
edition = "2024"
description = "Universal PDF field detection and filling engine"

[dependencies]
hoags_core = { path = "../core" }
dava_bridge = { path = "../dava-bridge" }
lopdf = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "pdffill"
path = "src/main.rs"
