[package]
name = "receipts"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "receipts"
path = "src/main.rs"
