[package]
name = "sheetwise"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
tabled = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "sheetwise"
path = "src/main.rs"
